--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ buildscript {
         //classpath group: 'org.codehaus.gpars', name: 'gpars', version: '1.2.1'
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath 'org.grails.plugins:api-framework:0.9'
-        classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.1.1'
+        classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
+        //classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.1.1'
     }
 }
 
@@ -29,7 +30,7 @@ plugins {
 version "0.1"
 group "@grails.app.group@"
 
-apply plugin: "spring-boot"
+apply plugin: "org.springframework.boot"
 apply plugin: "org.grails.grails-web"
 //apply plugin: "org.grails.grails-gsp"
 
@@ -49,12 +50,12 @@ repositories {
     //maven { url "http://maven.it.su.se/it.su.se/maven2/" }
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
-    }
-    applyMavenExclusions false
-}
+//dependencyManagement {
+//    imports {
+//        mavenBom "org.grails:grails-bom:$grailsVersion"
+//    }
+//    applyMavenExclusions false
+//}
 
 bootRun {
     systemProperties = System.properties
@@ -65,16 +66,39 @@ test {
 }
 
 dependencies {
+    compile "org.grails:grails-core"
+    compile "org.grails:grails-web-boot"
+    provided "org.grails.plugins:cache"
+    provided "org.grails.plugins:async"
+    compile "org.grails.plugins:events"
+
+    // test
+    profile "org.grails.profiles:web"
+    runtime "org.apache.tomcat:tomcat-jdbc"
+
+
+
+
     compile 'org.grails.plugins:api-framework:0.9'
+
+    compile "org.grails:grails-logging"
+    //compile "org.grails:grails-plugin-rest"
+    compile "org.grails:grails-plugin-databinding"
+    compile "org.grails:grails-plugin-i18n"
+    compile "org.grails:grails-plugin-services"
+    compile "org.grails:grails-plugin-url-mappings"
+    compile "org.grails:grails-plugin-interceptors"
+
     //compile group: 'org.scribe', name: 'scribe', version: '1.3.7'
     //compile(name:'api-framework', version:'0.2.1.2')
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile('org.grails:grails-dependencies'){
-        //exclude(module:'grails-plugin-rest')
-        exclude(module:'grails-bootstrap')
-        exclude(module:'grails-plugin-gsp')
-    }
+
+    //compile('org.grails:grails-dependencies'){
+    //    //exclude(module:'grails-plugin-rest')
+    //    exclude(module:'grails-bootstrap')
+    //    exclude(module:'grails-plugin-gsp')
+    //}
 
     //compile('org.grails:grails-web') {
     //    exclude(module: 'org.grails:grails-web-jsp')
@@ -82,8 +106,11 @@ dependencies {
     //    exclude(module:'org.grails:grails-web-gsp')
     //}
 
-    provided 'org.grails.plugins:hibernate:4.3.10.6'
-    provided "org.hibernate:hibernate-ehcache"
+    provided "org.grails.plugins:hibernate5"
+    provided "org.hibernate:hibernate-core:5.1.5.Final"
+    provided "org.hibernate:hibernate-ehcache:5.1.5.Final"
+    //provided 'org.grails.plugins:hibernate:4.3.10.6'
+    //provided "org.hibernate:hibernate-ehcache"
     runtime 'mysql:mysql-connector-java:5.1.29'
 
     testCompile('org.codehaus.groovy.modules.http-builder:http-builder:0.7.1') {
@@ -93,14 +120,19 @@ dependencies {
     }
 
     provided 'org.springframework.boot:spring-boot-starter-tomcat'
+    provided('org.grails.plugins:spring-security-core:3.2.0.M1')
 
-    provided('org.grails.plugins:spring-security-core:3.1.1')
+    provided("org.codehaus.groovy:groovy-ant:${groovyVersion}")
 
     //provided('org.grails.plugins:spring-security-rest:2.0.0.M2')
 
     compile('org.grails.plugins:spring-security-rest-gorm:2.0.0.M2'){
         exclude module: 'org.grails.plugins:spring-security-rest:2.0.0.M2'
     }
+
+    provided 'org.grails.plugins:converters:3.3.1'
+    compile "org.grails.plugins:async"
+    compile "org.grails:grails-plugin-rest"
 
     //compile 'org.grails.plugins:db-reverse-engineer:4.0.0'
 
