--- a/build.gradle
+++ b/build.gradle
@@ -73,48 +73,51 @@ test {
 
 
 dependencies {
+    /**
+     * API Block
+     */
     compile 'org.grails.plugins:api-framework:0.9.3'
 
-    // compile "org.grails:grails-core"
-    // compile "org.grails:grails-web-boot"
-    compile 'org.grails.plugins:cache:4.0.0'
-    compile "org.grails.plugins:async"
-    compile "org.grails.plugins:events"
+    //compile group: 'org.scribe', name: 'scribe', version: '1.3.7'
 
-    // test
-    profile "org.grails.profiles:web"
+    /**
+     * MVC Support Block
+     */
+    provided 'org.grails.plugins:cache:4.0.0'
+    compile "org.grails.plugins:async"
+    provided "org.grails:grails-logging"
+    provided "org.grails:grails-plugin-i18n"
+    provided "org.grails:grails-plugin-services"
+    provided "org.grails:grails-plugin-interceptors"
+    provided 'org.grails.plugins:converters:3.3.1'
+    provided "org.grails.plugins:events"
+    provided('org.grails:grails-web')
+
+    /**
+     * Application Server
+     */
     runtime "org.apache.tomcat:tomcat-jdbc"
 
+    /**
+     * Parallelization Block
+     */
     provided 'org.codehaus.gpars:gpars:1.2.1', {
         exclude group:'org.multiverse', module:'multiverse-core'
         exclude group:'org.codehaus.groovy', module: 'groovy-all'
     }
+    provided("org.codehaus.groovy:groovy-ant:${groovyVersion}")
 
-    compile "org.grails:grails-logging"
-    //compile "org.grails:grails-plugin-rest"
-    compile "org.grails:grails-plugin-databinding"
-    compile "org.grails:grails-plugin-i18n"
-    compile "org.grails:grails-plugin-services"
-    compile "org.grails:grails-plugin-url-mappings"
-    compile "org.grails:grails-plugin-interceptors"
-
-    //compile group: 'org.scribe', name: 'scribe', version: '1.3.7'
-    //compile(name:'api-framework', version:'0.2.1.2')
+    /**
+     * SpringBoot Block
+     */
     compile "org.springframework.boot:spring-boot-starter-logging"
+    provided 'org.springframework.boot:spring-boot-starter-tomcat'
     compile "org.springframework.boot:spring-boot-autoconfigure"
 
-    //compile('org.grails:grails-dependencies'){
-    //    //exclude(module:'grails-plugin-rest')
-    //    exclude(module:'grails-bootstrap')
-    //    exclude(module:'grails-plugin-gsp')
-    //}
 
-    compile('org.grails:grails-web') {
-        exclude(module: 'org.grails:grails-web-jsp')
-        exclude(module: 'org.grails:grails-web-sitemesh')
-        exclude(module:'org.grails:grails-web-gsp')
-    }
-
+    /**
+     * DB Block
+     */
     provided "org.grails.plugins:hibernate5"
     provided "org.hibernate:hibernate-core:5.1.5.Final"
     provided "org.hibernate:hibernate-ehcache:5.1.5.Final"
@@ -122,33 +125,29 @@ dependencies {
     //provided "org.hibernate:hibernate-ehcache"
     runtime 'mysql:mysql-connector-java:5.1.29'
 
+    /**
+     * Security block
+     */
+    provided('org.grails.plugins:spring-security-core:3.2.0.M1')
+    compile('org.grails.plugins:spring-security-rest:2.0.0.M2')
+    // required by spring-security-rest for loginController/logoutController
+    compile "org.grails:grails-plugin-rest"
+    compile('org.grails.plugins:spring-security-rest-gorm:2.0.0.M2'){
+        exclude module: 'org.grails.plugins:spring-security-rest:2.0.0.M2'
+    }
+
+    /**
+     * Test Block
+     */
+    testCompile "org.grails.plugins:geb"
+    //testCompile "org.grails:grails-plugin-testing"
+    testCompile "org.grails:grails-test-mixins:3.3.0"
+    testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
     testCompile('org.codehaus.groovy.modules.http-builder:http-builder:0.7.1') {
         exclude module: "commons-logging"
         exclude module: "xml-apis"
         exclude module: "groovy"
     }
-
-    provided 'org.springframework.boot:spring-boot-starter-tomcat'
-
-    provided("org.codehaus.groovy:groovy-ant:${groovyVersion}")
-
-    provided('org.grails.plugins:spring-security-core:3.2.0.M1')
-    compile('org.grails.plugins:spring-security-rest:2.0.0.M2')
-    compile('org.grails.plugins:spring-security-rest-gorm:2.0.0.M2'){
-        exclude module: 'org.grails.plugins:spring-security-rest:2.0.0.M2'
-    }
-
-    provided 'org.grails.plugins:converters:3.3.1'
-    compile "org.grails.plugins:async"
-    compile "org.grails:grails-plugin-rest"
-
-    //compile 'org.grails.plugins:db-reverse-engineer:4.0.0'
-
-    testCompile "org.grails.plugins:geb"
-    //testCompile "org.grails:grails-plugin-testing"
-    testCompile "org.grails:grails-test-mixins:3.3.0"
-    testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
-
     //testCompile "org.grails:grails-datastore-rest-client:4.0.4.RELEASE"
     console "org.grails:grails-console"
 }
