--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-// stormpath tenant: lovely-weaver
 buildscript {
     ext {
         grailsVersion = project.grailsVersion
@@ -7,13 +6,15 @@ buildscript {
         flatDir {
             dirs 'lib'
         }
-
         mavenLocal()
         mavenCentral()
         maven { url "https://repo.grails.org/grails/core" }
 
         // for installing local
         maven { url "${System.getProperty('user.home')}/.m2/repository" }
+        jcenter {
+            url "http://jcenter.bintray.com/"
+        }
     }
     dependencies {
         classpath group: 'org.codehaus.gpars', name: 'gpars', version: '1.2.1'
@@ -24,7 +25,6 @@ buildscript {
         classpath 'org.grails.plugins:api-framework:0.9.3'
     }
 }
-
 
 plugins {
     id "io.spring.dependency-management" version "0.6.0.RELEASE"
@@ -50,9 +50,13 @@ ext {
 
 repositories {
     mavenLocal()
+    mavenCentral()
     maven { url "https://repo.grails.org/grails/core" }
-    //maven { url "${System.getProperty('user.home')}/.m2/repository/" }
+    maven { url "${System.getProperty('user.home')}/.m2/repository/" }
     //maven { url "http://maven.it.su.se/it.su.se/maven2/" }
+    jcenter {
+        url "http://jcenter.bintray.com/"
+    }
 }
 
 //dependencyManagement {
@@ -140,15 +144,16 @@ dependencies {
      * Test Block
      */
     testCompile "org.grails.plugins:geb"
-    //testCompile "org.grails:grails-plugin-testing"
-    testCompile "org.grails:grails-test-mixins:3.3.0"
+    testCompile "org.grails:grails-plugin-testing"
+    testCompile "org.grails:grails-gorm-testing-support:1.1.4"
+    testCompile "org.grails:grails-web-testing-support:1.1.4"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
     testCompile('org.codehaus.groovy.modules.http-builder:http-builder:0.7.1') {
         exclude module: "commons-logging"
         exclude module: "xml-apis"
         exclude module: "groovy"
     }
-    //testCompile "org.grails:grails-datastore-rest-client:4.0.4.RELEASE"
+    testCompile "org.grails:grails-datastore-rest-client:4.0.4.RELEASE"
     console "org.grails:grails-console"
 }
 
