moving UI to nodejs

--- a/grails-app/conf/beapi.yml
+++ b/grails-app/conf/beapi.yml
@@ -170,7 +170,7 @@ apitoolkit:
     corsInterceptor:
         includeEnvironments: ['development','test']
         excludeEnvironments: ['production']
-        allowedOrigins: ['localhost:3000']
+        allowedOrigins: ['http://localhost']
 
 ---
 server:
