--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
 
         // for installing local
         maven { url "${System.getProperty('user.home')}/.m2/repository" }
+        // bintray
+        maven { url "http://dl.bintray.com/nosegrind/plugins" }
         jcenter {
             url "http://jcenter.bintray.com/"
         }
@@ -53,6 +55,7 @@ repositories {
     mavenCentral()
     maven { url "https://repo.grails.org/grails/core" }
     maven { url "${System.getProperty('user.home')}/.m2/repository/" }
+    maven { url "http://dl.bintray.com/nosegrind/plugins" }
     //maven { url "http://maven.it.su.se/it.su.se/maven2/" }
     jcenter {
         url "http://jcenter.bintray.com/"
@@ -81,7 +84,6 @@ dependencies {
      * API Block
      */
     compile 'org.grails.plugins:api-framework:0.9.3'
-
     //compile group: 'org.scribe', name: 'scribe', version: '1.3.7'
 
     /**
