adding better mock data for bootstrapped IO state, doesnt overwrite files and beginning of allowing single file being written

--- a/build.gradle
+++ b/build.gradle
@@ -171,6 +171,12 @@ task wrapper(type: Wrapper) {
     gradleVersion = gradleWrapperVersion
 }
 
+bootRun {
+    systemProperties = System.properties
+}
 
+generateIostateCommand {
+    systemProperties = System.properties
+}
 
 
