--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ buildscript {
         classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
 
         // for installing local
-        classpath 'org.grails.plugins:api-framework:0.9.61'
+        classpath 'org.grails.plugins:api-framework:0.9.7'
     }
 }
 
@@ -91,7 +91,7 @@ dependencies {
     /**
      * API Block
      */
-    compile 'org.grails.plugins:api-framework:0.9.61'
+    compile 'org.grails.plugins:api-framework:0.9.7'
     //compile group: 'org.scribe', name: 'scribe', version: '1.3.7'
 
     /**
@@ -138,6 +138,7 @@ dependencies {
     //provided 'org.grails.plugins:hibernate:4.3.10.6'
     //provided "org.hibernate:hibernate-ehcache"
     runtime 'mysql:mysql-connector-java:5.1.29'
+    provided("com.h2database:h2")
 
     /**
      * Security block
