--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 import org.grails.gradle.plugin.commands.*
 
+
 buildscript {
     ext {
         grailsVersion = project.grailsVersion
@@ -32,17 +33,14 @@ buildscript {
 
 plugins {
     id "io.spring.dependency-management" version "0.6.0.RELEASE"
-    //id "com.jfrog.bintray" version "1.7.3"
 }
 
 version "0.1"
 group "@grails.app.group@"
 
+
 apply plugin: "org.springframework.boot"
 apply plugin: "org.grails.grails-web"
-
-
-//apply plugin: "org.grails.grails-gsp"
 
 
 task generateIostateCommand(type: ApplicationContextCommandTask) {
@@ -59,32 +57,17 @@ ext {
 }
 
 repositories {
+    //inherits true
+    //ebr()
     mavenLocal()
     mavenCentral()
     maven { url "https://repo.grails.org/grails/core" }
     maven { url "${System.getProperty('user.home')}/.m2/repository/" }
-    maven { url "http://dl.bintray.com/nosegrind/plugins" }
-    //maven { url "http://maven.it.su.se/it.su.se/maven2/" }
+    maven { url "http://dl.bintray.com/orubel/plugins" }
     jcenter {
         url "http://jcenter.bintray.com/"
     }
 }
-
-//dependencyManagement {
-//    imports {
-//        mavenBom "org.grails:grails-bom:$grailsVersion"
-//    }
-//    applyMavenExclusions false
-//}
-
-bootRun {
-    systemProperties = System.properties
-}
-
-test {
-    systemProperties = System.properties
-}
-
 
 
 dependencies {
@@ -93,6 +76,8 @@ dependencies {
      */
     compile 'org.grails.plugins:api-framework:0.9.7'
     //compile group: 'org.scribe', name: 'scribe', version: '1.3.7'
+
+    compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '9.0.12'
 
     /**
      * MVC Support Block
@@ -138,7 +123,7 @@ dependencies {
     //provided 'org.grails.plugins:hibernate:4.3.10.6'
     //provided "org.hibernate:hibernate-ehcache"
     runtime 'mysql:mysql-connector-java:5.1.29'
-    provided("com.h2database:h2")
+    compile "com.h2database:h2"
 
     /**
      * Security block
@@ -180,5 +165,6 @@ bootRun {
 generateIostateCommand {
     systemProperties = System.properties
 }
+
 
 
