saving initial setup for reading and testing setup for H2 localized and master server setup for reading settings from external config

--- a/grails-app/conf/beapi_server.yml
+++ b/grails-app/conf/beapi_server.yml
@@ -18,6 +18,8 @@ grails:
 ---
 environments:
     test:
+        masterCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
+        localCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
         webhookActive: false
         apiThrottle: false
         postProcess: false
@@ -32,6 +34,8 @@ environments:
         grails:
             serverURL: "http://test.yourdomain.net:8080" #changeit
     development:
+        masterCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
+        localCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
         webhookActive: false
         apiThrottle: false
         postProcess: false
@@ -46,6 +50,8 @@ environments:
         grails:
             serverURL: "http://test.yourdomain.net:8080" #changeit
     production:
+        masterCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
+        localCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
         webhookActive: false
         apiThrottle: false
         postProcess: false
