saving additional config settings after testing

--- a/grails-app/conf/beapi_server.yml
+++ b/grails-app/conf/beapi_server.yml
@@ -18,8 +18,14 @@ grails:
 ---
 environments:
     test:
-        masterCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
-        localCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
+        masterCache:
+            url: "jdbc:h2:tcp://localhost:9092/mem:rateLimitDB"
+            username: "sa"
+            password: "sa"
+        localCache:
+            url: "jdbc:h2:tcp://localhost:9092/mem:rateLimitDB"
+            username: "sa"
+            password: "sa"
         webhookActive: false
         apiThrottle: false
         postProcess: false
@@ -34,8 +40,14 @@ environments:
         grails:
             serverURL: "http://test.yourdomain.net:8080" #changeit
     development:
-        masterCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
-        localCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
+        masterCache:
+            url: "jdbc:h2:tcp://localhost:9092/mem:rateLimitDB"
+            username: "sa"
+            password: "sa"
+        localCache:
+            url: "jdbc:h2:tcp://localhost:9092/mem:rateLimitDB"
+            username: "sa"
+            password: "sa"
         webhookActive: false
         apiThrottle: false
         postProcess: false
@@ -50,8 +62,14 @@ environments:
         grails:
             serverURL: "http://test.yourdomain.net:8080" #changeit
     production:
-        masterCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
-        localCache: "jdbc:h2:tcp://localhost/mem:rateLimitDB"
+        masterCache:
+            url: "jdbc:h2:tcp://localhost:9092/mem:rateLimitDB"
+            username: "sa"
+            password: "sa"
+        localCache:
+            url: "jdbc:h2:tcp://localhost:9092/mem:rateLimitDB"
+            username: "sa"
+            password: "sa"
         webhookActive: false
         apiThrottle: false
         postProcess: false
