--- a/grails-app/conf/beapi_messages.yml
+++ b/grails-app/conf/beapi_messages.yml
@@ -1,10 +1,10 @@
 interceptor:
     errorMsg:
-        checkRequestMethod: 'Expected request method for endpoint does not match sent method'
-        rateLimitExceeded: 'Rate Limit exceeded. Please wait'
-        checkURIDefinitions: 'Expected request variables for endpoint do not match sent variables'
-        checkAuth: 'Unauthorized Access attempted'
-        noResourceError: 'No resource returned; query was empty'
+        checkRequestMethod: {400,'Expected request method for endpoint does not match sent method'}
+        rateLimitExceeded: {404,'Rate Limit exceeded. Please wait'}
+        checkURIDefinitions: {400,'Expected request variables for endpoint do not match sent variables'}
+        checkAuth: {400,'Unauthorized Access attempted'}
+        noResourceError: {400,'No resource returned; query was empty'}
 
 ---
 
