fix so quartz doesnt run during test

--- a/grails-app/conf/beapi_server.yml
+++ b/grails-app/conf/beapi_server.yml
@@ -36,6 +36,8 @@ environments:
             port: 8080
         grails:
             serverURL: "http://test.yourdomain.net:8080" #changeit
+        quartz:
+            pluginEnabled: false
     development:
         webhookActive: false
         apiThrottle: false
