--- a/grails-app/conf/beapi_api.yml
+++ b/grails-app/conf/beapi_api.yml
@@ -2,7 +2,10 @@ apitoolkit:
     apiName: api
     attempts: 5
     procCores: 8
-    roles: ['ROLE_USER','ROLE_ROOT','ROLE_ADMIN','ROLE_ARCH']
+    networkGroups: ['private','public']
+    networkRoles:
+        public: ['ROLE_USER','ROLE_ADMIN']  
+        private: ['ROLE_ADMIN']
     views: ['admin','apidoc','api','login','logout']
     apiServer: ['http://localhost:8080']
     apichain:
@@ -19,17 +22,15 @@ apitoolkit:
         dataLimit: {'ROLE_USER':1000000,'ROLE_ADMIN':1000000}
         # in seconds (3600 = 60 minutes)
         expires: 3600
-    user:
-        roles: ['ROLE_USER']
-    admin:
-        roles: ['ROLE_ROOT','ROLE_ADMIN','ROLE_ARCH']
     serverType: master
     webhook:
         services: ['iostate']
     corsInterceptor:
         includeEnvironments: ['development','test','production']
         excludeEnvironments: []
-        allowedOrigins: ['http://localhost','http://localhost:8080','http://127.0.0.1','http://localhost/','http://localhost:8080/','http://127.0.0.1/']
+        networkGroups:
+            public: ['http://localhost','http://localhost:8080','http://127.0.0.1','http://test.nosegrind.net']  
+            private: ['http://localhost','http://localhost:8080','http://127.0.0.1']  
 
 ---
 root:
