adding apiFrameworkVersion to gradle.properties

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ buildscript {
         classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
 
         // for installing local
-        classpath 'org.grails.plugins:api-framework:0.9.9'
+        classpath "org.grails.plugins:api-framework:${apiFrameworkVersion}"
     }
 }
 
@@ -35,6 +35,11 @@ plugins {
     //id "com.jfrog.bintray" version "1.7.3"
 }
 
+
+
+def appVersion = (System.getenv('BEAPI_BUILD_VERSION'))?System.getenv('BEAPI_BUILD_VERSION'):'1'
+def patch = (System.getenv('BUILD_NUMBER'))?System.getenv('BUILD_NUMBER'):'0'
+//version = "${appVersion}.${patch}"
 version "1.0"
 group "@grails.app.group@"
 
@@ -92,7 +97,7 @@ dependencies {
     /**
      * API Block
      */
-    compile 'org.grails.plugins:api-framework:0.9.9'
+    compile "org.grails.plugins:api-framework:${apiFrameworkVersion}"
     //compile group: 'org.scribe', name: 'scribe', version: '1.3.7'
 
     /**
