--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,4 @@ gradleWrapperVersion=2.3
 gormVersion=6.1.6.RELEASE
 groovyVersion = 2.4.13
 buildVersion=1.3
-apiFrameworkVersion=1.2.0
+# apiFrameworkVersion=1.2.0
